GFX tweaks/fixes
- text-cropping in instance switcher when content overflows
- fixed layout for message in Coldstake setup modal

--- a/src/app/main-wallet/active/overview/widgets/coldstake/coldstake-modal/coldstake-modal.component.scss
+++ b/src/app/main-wallet/active/overview/widgets/coldstake/coldstake-modal/coldstake-modal.component.scss
@@ -2,7 +2,4 @@
 
 .modal-content {
   width: 32rem;
-  .modal-highlight {
-    padding: 6px 24px 24px;
-  }
 }
