--- a/src/styles.scss
+++ b/src/styles.scss
@@ -326,6 +326,14 @@ body {
     .name {
       font-weight: 500;
       color: var(--color-white);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .value {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
